# e-pttb-msi-4-27-cs-d-2526

./: .gitignore  LAB_CONFIG_EXAMPLE.md  LICENSE  LISEZMOI.md  MY_LAB_CONFIG.md  README.md  cookies.txt  docker-compose.yml  findings.csv  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: ci.yml
core/: storage.py
core/api/: __init__.py  app.py  auth.py  config.py  routes.py
core/models/: __init__.py  artifact.py  audit_log.py  base.py  finding.py  job.py  target.py  user.py
core/orchestrator/: __init__.py  celery_app.py  tasks.py  workflows.py
core/plugins/: __init__.py  base.py  executor.py  registry.py
core/reporting/: aggregate_report_generator.py  html_generator.py  pdf_generator.py
core/security/: __init__.py  audit.py  crypto.py  rbac.py  scope_checker.py
deploy/: .env.example  .env.save  Dockerfile.api  Dockerfile.worker  Dockerfile.worker.backup  cookies.txt
docs/: AIRCRACK_SETUP.md  API.md  BACKUP_PROCEDURES.md  CREDENTIALS.md  FUTURE_IMPROVEMENTS.md  GUIDE_PULL_REQUESTS_FR.md  KNOWN_ISSUES.md  LAB_CONFIG_EXAMPLE.md  PLUGINS.md  QUICKSTART.md  RGPD_POLICY.md  ROADMAP_PHASE3.md  STORAGE_GOVERNANCE.md
plugins/aircrack/: __init__.py  plugin.py
plugins/ettercap/: __init__.py  plugin.py
plugins/hydra/: __init__.py  plugin.py
plugins/metasploit/: __init__.py  plugin.py  plugin.py.backup
scripts/: add_job_timestamps.py  create_user.py  init_db.py
tests/: conftest.py
ui/: i18n.py  routes.py  routes.py.backup  routes.py.backup_duplicates  routes.py.old
wordlists/: passwords_test.txt  usernames_test.txt
(+59 files in other folders)
