[tool.poetry]
name = "pentest-toolbox-v2"
version = "1.0.0"
description = "Toolbox automatisée de pentest modulaire"
authors = ["Carlos <natachas_clown@yahoo.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
flask-login = "^0.6"
celery = "^5.3"
redis = "^5.0"
psycopg2-binary = "^2.9"
minio = "^7.2"
cryptography = "^42.0"
python-nmap = "^0.7"
requests = "^2.31"
jinja2 = "^3.1"
weasyprint = "^60.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
