[tool.poetry]
name = "pentest-toolbox-v2"
version = "1.0.0"
description = "Toolbox automatisée de pentest modulaire"
authors = ["Carlos <natachas_clown@yahoo.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
flask-login = "^0.6"
celery = "^5.3"
redis = "^5.0"
psycopg2-binary = "^2.9"
minio = "^7.2"
cryptography = "^42.0"
python-nmap = "^0.7"
requests = "^2.31"
jinja2 = "^3.1"
weasyprint = ">=62.0"
python-dotenv = "^1.2.2"
theHarvester = {git = "https://github.com/laramies/theHarvester.git", tag = "4.6.0"}
pymetasploit3 = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"
pytest-flask = "^1.3.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
